<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.HomeActivity">



    <TextView
        android:id="@+id/txt_description_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_desc"
        android:textSize="19sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_peso"
        android:layout_gravity="start"
        android:textSize="21sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edt_peso_calc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_txt"
        android:textSize="21sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/txt_altura"
        android:layout_marginTop="16dp"
        android:textSize="21sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edt_altura_calc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:inputType="numberDecimal"
        android:hint="@string/edt_altura"
        android:textSize="21sp"
        android:textColor="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/txt_btn_calc"
        android:textSize="18sp" />

</LinearLayout>